[package]
name = "misb-klv"
version = "0.1.0"
authors = ["Geordon Worley"]

[features]
default = []
verbose-errors = ["nom/verbose-errors"]

[dependencies]
nom = "4.0.0"
serde = "1.0.59"
serde_derive = "1.0.59"
serde_json = "1.0.17"
boolinator = "2.4.0"
angle = "0.3.5"

[dependencies.chrono]
version = "0.4.2"
features = ["serde", "clock"]